Fix overflow for cash-register and wing for duck

--- a/src/cash-register-superscript/style.styl
+++ b/src/cash-register-superscript/style.styl
@@ -12,6 +12,7 @@ body
   display flex
   justify-content center
   min-height 100vh
+  overflow-x hidden
 
 .cash-register
   &__total-wrap
